--- a/app/src/main/res/layout/todo_row.xml
+++ b/app/src/main/res/layout/todo_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="horizontal">
 
@@ -14,6 +15,10 @@ android:orientation="horizontal">
         android:id="@+id/textViewAssignment"
         android:layout_width="377dp"
         android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_toEndOf="@+id/checkBox"
         android:layout_weight="1"
         android:text="@string/textViewAssignment" />
 
