--- a/app/src/main/res/layout/assignment_details.xml
+++ b/app/src/main/res/layout/assignment_details.xml
@@ -53,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="84dp"
         android:layout_marginTop="100dp"
+        android:onClick="onClickNevermind"
         android:text="@string/btnNevermind"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTitle" />
