--- a/app/src/main/res/layout/assignment_details.xml
+++ b/app/src/main/res/layout/assignment_details.xml
@@ -41,6 +41,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="84dp"
+        android:onClick="onClickAdd"
         android:text="@string/btnAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.976"
