Stuck on Firebase Implementation

--- a/app/src/main/res/layout/assignment_details.xml
+++ b/app/src/main/res/layout/assignment_details.xml
@@ -67,7 +67,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="Due Date"
+        android:hint="@string/editDate"
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
         android:onClick="addEventToCalendar"
-        android:text="Add to Calendar"
+        android:text="@string/btnCalandarAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnNevermind" />
