--- a/app/src/main/res/layout/todo_row.xml
+++ b/app/src/main/res/layout/todo_row.xml
@@ -9,7 +9,8 @@ android:orientation="horizontal">
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:onClick="onClickCheckbox" />
 
     <TextView
         android:id="@+id/textViewAssignment"
